--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="НАЧАТЬ"
-            android:id="@+id/button3"
+            android:id="@+id/buttonBegin"
             android:layout_weight="0.09"
             android:textSize="30sp" />
 
