--- a/app/src/main/res/layout/activity_flavor.xml
+++ b/app/src/main/res/layout/activity_flavor.xml
@@ -12,7 +12,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -41,11 +42,11 @@
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="81dp"
                 android:text="Суши(Калифорния)"
                 android:id="@+id/radioButton"
                 android:checked="false"
-                android:textSize="35sp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -55,7 +56,7 @@
             android:text="Жевательная резинка"
             android:id="@+id/radioButton2"
             android:checked="false"
-            android:textSize="35sp" />
+            android:textSize="25sp" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -64,11 +65,11 @@
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="185dp"
                 android:text="Сахарная вата"
                 android:id="@+id/radioButton3"
                 android:checked="false"
-                android:textSize="35sp" />
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -78,11 +79,11 @@
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="105dp"
                 android:text="Пицца(Пепперони)"
                 android:id="@+id/radioButton4"
                 android:checked="false"
-                android:textSize="35sp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -98,12 +99,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Далее"
-                android:id="@+id/button" />
+                android:id="@+id/imageView3" />
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></LinearLayout>
+
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="136dp"
+        android:text="Далее"
+        android:id="@+id/button"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
