--- a/app/src/main/res/layout/activity_flavor.xml
+++ b/app/src/main/res/layout/activity_flavor.xml
@@ -96,14 +96,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"></LinearLayout>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:text="Далее"
+            android:id="@+id/button"
+            android:layout_below="@+id/linearLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="right" />
     </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="136dp"
-        android:text="Далее"
-        android:id="@+id/button"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 </RelativeLayout>
