--- a/app/src/main/res/layout/activity_flavor.xml
+++ b/app/src/main/res/layout/activity_flavor.xml
@@ -98,7 +98,7 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:text="Далее"
             android:id="@+id/button"
             android:layout_below="@+id/linearLayout"
