--- a/app/src/main/res/layout/activity_flavor.xml
+++ b/app/src/main/res/layout/activity_flavor.xml
@@ -100,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Далее"
-            android:id="@+id/button"
+            android:id="@+id/buttonNext"
             android:layout_below="@+id/linearLayout"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
