--- a/app/src/main/res/layout/activity_flavor.xml
+++ b/app/src/main/res/layout/activity_flavor.xml
@@ -33,6 +33,12 @@
                 android:text="Выбери вкус твоей печеньки)"
                 android:id="@+id/textView2"
                 android:textSize="40sp" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -64,6 +70,11 @@
                 android:checked="false"
                 android:textSize="25sp" />
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></LinearLayout>
+
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,30 +82,15 @@
                 android:id="@+id/radioButton4"
                 android:checked="false"
                 android:textSize="25sp" />
-        </LinearLayout>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:id="@+id/imageView2"
-            android:src="@drawable/fortunecookies_2094"
-            android:layout_weight="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView3" />
         </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></LinearLayout>
 
         <Button
             android:layout_width="wrap_content"
@@ -105,6 +101,50 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_gravity="right" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:id="@+id/imageView2"
+                android:layout_weight="1"
+                android:src="@drawable/kaliforniy" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:id="@+id/imageView3"
+                android:layout_weight="1"
+                android:src="@drawable/loveis" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:id="@+id/imageView13"
+                android:layout_weight="1"
+                android:src="@drawable/vata01" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:id="@+id/imageView14"
+                android:layout_weight="1"
+                android:adjustViewBounds="false"
+                android:src="@drawable/pepperonypizza" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
