--- a/app/src/main/res/layout/activity_fortune.xml
+++ b/app/src/main/res/layout/activity_fortune.xml
@@ -13,31 +13,44 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="bottom">
-
-        </LinearLayout>
-
-        <TextView
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Сегодняшний день будет полон неожиданностей"
-            android:id="@+id/textView5"
-            android:textSize="30sp"
-            android:singleLine="false"
-            android:textColor="#82f1d1"
-            android:textDirection="firstStrong"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:textStyle="bold|italic"
-            android:enabled="false"
-            android:gravity="center|center_horizontal" />
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/imageViewpred"
+                android:src="@drawable/predskaz"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="4dp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:layout_marginLeft="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Сегодняшний день будет полон неожиданностей"
+                android:id="@+id/textView5"
+                android:textSize="20sp"
+                android:singleLine="false"
+                android:textColor="#000000"
+                android:textDirection="firstStrong"
+                android:textStyle="bold|italic"
+                android:enabled="false"
+                android:gravity="center|center_horizontal"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginBottom="60dp" />
+
+        </FrameLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -46,22 +59,24 @@
             android:layout_weight="1"
             android:layout_marginBottom="160dp">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView5" />
         </LinearLayout>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="в меню"
-            android:id="@+id/buttonMenu"
-            android:gravity="top|center|center_horizontal"
-            android:textColor="#aa6d6d"
-            android:textStyle="normal|bold"
-            android:layout_marginBottom="20dp" />
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="в меню"
+        android:id="@+id/buttonMenu"
+        android:gravity="top|center|fill_vertical|center_horizontal"
+        android:textColor="#aa6d6d"
+        android:textStyle="normal|bold"
+        android:layout_weight="0"
+        android:textSize="30dp"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
