--- a/app/src/main/res/layout/activity_flavor.xml
+++ b/app/src/main/res/layout/activity_flavor.xml
@@ -78,7 +78,7 @@
             <RadioButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Пицца(Пепперони)"
+                android:text="Биг Мак"
                 android:id="@+id/radioButton4"
                 android:checked="false"
                 android:textSize="25sp" />
@@ -142,7 +142,7 @@
                 android:id="@+id/imageView14"
                 android:layout_weight="1"
                 android:adjustViewBounds="false"
-                android:src="@drawable/pepperonypizza" />
+                android:src="@drawable/Биг_Мак" />
         </LinearLayout>
 
     </LinearLayout>
