--- a/app/src/main/res/layout/activity_cookie.xml
+++ b/app/src/main/res/layout/activity_cookie.xml
@@ -24,11 +24,19 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
                 android:text="Выбери свою печеньку..."
                 android:id="@+id/textView5"
-                android:textSize="35sp" />
+                android:textSize="35sp"
+                android:layout_weight="1" />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:id="@+id/buttonNext2"
+                android:layout_weight="1"
+                android:text="Далее" />
 
         </LinearLayout>
 
@@ -113,6 +121,7 @@
                 android:id="@+id/imageView9"
                 android:layout_weight="1"
                 android:src="@drawable/cookiesyum" />
+
         </LinearLayout>
 
     </LinearLayout>
