--- a/app/src/main/res/layout/activity_cookie.xml
+++ b/app/src/main/res/layout/activity_cookie.xml
@@ -35,6 +35,9 @@
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:id="@+id/buttonNext2"
+                android:layout_below="@+id/linearLayout"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_weight="1"
                 android:text="Далее" />
 
@@ -49,14 +52,14 @@
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="80dp"
-                android:id="@+id/imageView5"
+                android:id="@+id/cookie1"
                 android:layout_weight="1"
                 android:src="@drawable/gingerman_162141_960_720" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="80dp"
-                android:id="@+id/imageView6"
+                android:id="@+id/cookie2"
                 android:src="@drawable/oreo"
                 android:layout_weight="1" />
         </LinearLayout>
@@ -87,14 +90,14 @@
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="80dp"
-                    android:id="@+id/imageView11"
+                    android:id="@+id/cookie3"
                     android:layout_weight="1"
                     android:src="@drawable/russiancookies" />
 
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="80dp"
-                    android:id="@+id/imageView8"
+                    android:id="@+id/cookie4"
                     android:layout_weight="1"
                     android:src="@drawable/fortunecookies_2094" />
 
@@ -111,14 +114,14 @@
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="80dp"
-                android:id="@+id/imageView10"
+                android:id="@+id/cookie5"
                 android:layout_weight="1"
                 android:src="@drawable/image" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="80dp"
-                android:id="@+id/imageView9"
+                android:id="@+id/cookie6"
                 android:layout_weight="1"
                 android:src="@drawable/cookiesyum" />
 
