--- a/app/src/main/res/layout/activity_fortune.xml
+++ b/app/src/main/res/layout/activity_fortune.xml
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Сегодняшний день будет полон неожиданностей"
-                android:id="@+id/textView5"
+                android:id="@+id/textViewFortune"
                 android:textSize="20sp"
                 android:singleLine="false"
                 android:textColor="#000000"
