--- a/app/src/main/res/layout/activity_cookie.xml
+++ b/app/src/main/res/layout/activity_cookie.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="appcampsiberia.fortunecookies.CookieActivity">
 
     <ImageView
@@ -23,7 +19,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="53dp">
+        android:layout_marginBottom="53dp"
+        android:padding="16dp">
 
         <LinearLayout
             android:orientation="horizontal"
