--- a/app/src/main/res/layout/activity_flavor.xml
+++ b/app/src/main/res/layout/activity_flavor.xml
@@ -3,17 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="appcampsiberia.fortunecookies.FlavorActivity">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView6"
+            android:src="@drawable/rhbc"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,42 +48,47 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Суши(Калифорния)"
-                android:id="@+id/radioButton"
-                android:checked="false"
-                android:textSize="25sp" />
-
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Жевательная резинка"
-                android:id="@+id/radioButton2"
-                android:checked="false"
-                android:textSize="25sp" />
-
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Сахарная вата"
-                android:id="@+id/radioButton3"
-                android:checked="false"
-                android:textSize="25sp" />
-
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></LinearLayout>
 
-            <RadioButton
+            <RadioGroup
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Биг Мак"
-                android:id="@+id/radioButton4"
-                android:checked="false"
-                android:textSize="25sp" />
+                android:layout_height="match_parent">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Суши(Калифорния)"
+                    android:id="@+id/radioButton"
+                    android:checked="false"
+                    android:textSize="25sp" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Жевательная резинка"
+                    android:id="@+id/radioButton2"
+                    android:checked="false"
+                    android:textSize="25sp" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Сахарная вата"
+                    android:id="@+id/radioButton3"
+                    android:checked="false"
+                    android:textSize="25sp" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Биг Мак"
+                    android:id="@+id/radioButton4"
+                    android:checked="false"
+                    android:textSize="25sp" />
+            </RadioGroup>
 
         </LinearLayout>
 
@@ -135,6 +150,7 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="false"
                 android:src="@drawable/bigmac" />
+
         </LinearLayout>
 
     </LinearLayout>
