--- a/app/src/main/res/layout/activity_fortune.xml
+++ b/app/src/main/res/layout/activity_fortune.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="appcampsiberia.fortunecookies.FortuneActivity">
 
     <LinearLayout
@@ -15,7 +11,8 @@
         android:layout_height="match_parent"
         android:weightSum="1"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:padding="16dp">
 
         <FrameLayout
             android:layout_width="wrap_content"
