--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -3,17 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="appcampsiberia.fortunecookies.NameActivity">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:padding="16dp">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -42,7 +39,7 @@
                 android:textIsSelectable="false"
                 android:textSize="40sp"
                 android:layout_weight="0.77"
-                android:layout_marginTop="150dp"
+                android:layout_marginTop="160dp"
                 android:layout_marginRight="50dp" />
 
         </LinearLayout>
@@ -58,6 +55,10 @@
                 android:id="@+id/imageView4" />
 
         </LinearLayout>
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></RadioGroup>
 
     </LinearLayout>
 
@@ -78,34 +79,39 @@
 
     </LinearLayout>
 
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Женский"
+            android:id="@+id/radioButton6"
+            android:checked="false"
+            android:textSize="35sp"
+            android:layout_gravity="left"
+            android:layout_marginTop="80dp" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Мужской"
+            android:id="@+id/radioButton5"
+            android:textSize="35sp"
+            android:layout_gravity="left"
+            android:layout_marginTop="30dp"
+            android:checked="false" />
+    </RadioGroup>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
         android:layout_marginTop="270dp"
         android:textSize="45sp"
-        android:text="Твоё имя"
         android:gravity="center|center_horizontal"
-        android:textColor="#8199f6" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Женский"
-        android:id="@+id/radioButton6"
-        android:checked="false"
-        android:textSize="35sp"
-        android:layout_gravity="left"
-        android:layout_marginTop="130dp" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Мужской"
-        android:id="@+id/radioButton5"
-        android:textSize="35sp"
-        android:layout_gravity="left"
-        android:layout_marginTop="70dp"
-        android:checked="false" />
+        android:textColor="#8199f6"
+        android:hint="Твоё имя" />
 
 </RelativeLayout>
