--- a/app/src/main/res/layout/activity_fortune.xml
+++ b/app/src/main/res/layout/activity_fortune.xml
@@ -11,23 +11,19 @@
         android:layout_height="match_parent"
         android:weightSum="1"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:padding="16dp">
+        android:layout_alignParentStart="false">
 
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/imageViewpred"
                 android:src="@drawable/predskaz"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="4dp"
                 android:layout_gravity="center"
-                android:scaleType="centerCrop"
-                android:layout_marginLeft="5dp" />
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:layout_width="wrap_content"
