--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,20 +28,6 @@
             android:layout_height="wrap_content"
             android:weightSum="1">
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.79"
-            android:layout_gravity="bottom">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView6" />
-
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -51,33 +37,93 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/imageView5"
-                    android:src="@drawable/logo" />
+                    android:src="@drawable/logo"
+                    android:layout_weight="1" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"></LinearLayout>
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:layout_marginTop="100dp">
 
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Узнай"
+                    android:id="@+id/textView"
+                    android:textSize="50sp"
+                    android:textColor="#fe0bb9"
+                    android:typeface="serif"
+                    android:textIsSelectable="false"
+                    android:textStyle="bold|italic"
+                    android:layout_gravity="top"
+                    android:gravity="fill_horizontal|center|right"
+                    android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="свою"
+                android:id="@+id/textView6"
+                android:textSize="50dp"
+                android:textStyle="bold|italic"
+                android:textColor="#f935e8"
+                android:gravity="center_vertical|fill_vertical|center_horizontal"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="Судьбу"
+                android:id="@+id/textView7"
+                android:textSize="60sp"
+                android:textStyle="italic"
+                android:textColor="#dd1dff"
+                android:layout_gravity="right"
+                android:gravity="right" />
         </LinearLayout>
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:text="НАЧАТЬ"
             android:id="@+id/buttonBegin"
-            android:layout_weight="0.09"
+            android:layout_weight="1"
             android:textSize="30sp" />
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:text="прошлые предсказания"
             android:id="@+id/button2"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.08" />
+            android:layout_weight="1" />
 
     </LinearLayout>
 
