--- a/app/src/main/res/layout/activity_about_actvity.xml
+++ b/app/src/main/res/layout/activity_about_actvity.xml
@@ -48,7 +48,8 @@
 А также показать их будующее.(И просто прикольнуться )"
                 android:id="@+id/textView8"
                 android:textColor="#21f9b1"
-                android:textSize="25sp" />
+                android:textSize="25sp"
+                android:layout_marginLeft="15dp" />
 
         </LinearLayout>
 
