--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:text="Судьбу"
+                android:text="судьбу"
                 android:id="@+id/textView7"
                 android:textSize="60sp"
                 android:textStyle="italic"
